Wed Jan 23 16:48:54 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Lib_Find.h:
	* ace/Lib_Find.cpp (ldfind): Change to use Win32 API SearchPath to
	  search for the target DLL and updated the document for ldfind in
	  header file.  Thanks to Eugene Alterman
	  <Eugene.Alterman@bremer-inc.com> for submitting the patch.

Wed Jan 23 14:01:32 2002  Ossama Othman  <ossama@uci.edu>

	* ace/config-lynxos.h (ACE_LACKS_INET_ATON):

	  LynxOS does not implement the inet_aton() function.

Wed Jan 23 16:37:52 2002  Steve Huston  <shuston@riverace.com>

        * ace/NT_Service.cpp (insert): If the CreateService call fails,
          be sure to save the error value before making another Win32 call
          that will smash it. Thanks to Kelly Hickel <kfh@mqsoftware.com>
          for reporting this.
          Also ACE-ified the source better.

        * examples/NT_Service/main.cpp: Added some ACE_ERROR output if
          operations requested from the command line fail.

Wed Jan 23 16:14:43 2002  Boris Kolpackov  <bosk@ipmce.ru>

	* include/makeinclude/platform_sunos5_sunc++.GNU

	  Added work around for famous Sun CC "pure virtual function called"
	  bug. Unfortunately this involves introduction of yet another #define.
	  See TAO/tao/ValueBase.h for more information.

Tue Jan 22 21:27:25 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/ace_dll.vcp: Add Frameork_Component.* to the builds. Thanks
	  to Venkita for pointing it out.

Tue Jan 22 17:42:39 2002  Steve Huston  <shuston@riverace.com>

        * ace/NT_Service.(h cpp): Added two new methods:
           void capture_log_msg_attributes (void): Grabs a copy of the
                calling thread's ACE_OS_Log_Msg_Attributes to facilitate
                inheritance of the logging attributes in the service thread.
           void inherit_log_msg_attributes (void): Called in a service
                thread, inherits the main thread's logging attributes.